update: gpu_service, dataset_vis, training config

--- a/debug/de_dataset_vis.ipynb
+++ b/debug/de_dataset_vis.ipynb
@@ -17,7 +17,8 @@
     "import torch\n",
     "from PIL import Image\n",
     "from tqdm import tqdm\n",
-    "from robokit.debug_utils.images import concatenate_rgb_images, plot_action_wrt_time"
+    "from robokit.debug_utils.images import concatenate_rgb_images, plot_action_wrt_time\n",
+    "from robokit.debug_utils.io import dataloader_speed_test"
    ]
   },
   {
@@ -42,10 +43,14 @@
    "source": [
     "dataset = TCLImageDataset(\n",
     "    data_root=\"/home/geyuan/local_soft/TCL/collected_data_0425\",\n",
-    "    horizon=16, pad_before=1, pad_after=7,\n",
+    "    horizon=16, pad_before=0, pad_after=7,\n",
     "    shape_meta={\n",
     "        \"obs\": {\n",
     "            \"image\": {\n",
+    "                \"shape\": [3, 240, 320],\n",
+    "                \"type\": \"rgb\"\n",
+    "            },\n",
+    "            \"gripper\": {\n",
     "                \"shape\": [3, 240, 320],\n",
     "                \"type\": \"rgb\"\n",
     "            },\n",
@@ -58,7 +63,8 @@
     "            \"shape\": [7,]\n",
     "        }\n",
     "    }\n",
-    ")"
+    ")\n",
+    "dataloader_speed_test(dataset)"
    ]
   },
   {
@@ -100,7 +106,7 @@
    "source": [
     "global_idx = 0\n",
     "\n",
-    "task_skip_idx = 1\n",
+    "task_skip_idx = 1000\n",
     "fps = 10\n",
     "\n",
     "# task_skip_idx = 35\n",
@@ -179,20 +185,26 @@
     "batch_data = dataset[10]\n",
     "\n",
     "obs_image = []\n",
+    "obs_gripper = []\n",
     "obs_joint_state = []\n",
     "action = []\n",
     "\n",
     "obs_image_data = batch_data['obs']['image']  # (T,C,H,W), in [-1,1]\n",
+    "obs_gripper_data = batch_data['obs']['gripper']\n",
     "obs_image_data = (obs_image_data.permute(0, 2, 3, 1).numpy() * 255.).astype(np.uint8)\n",
+    "obs_gripper_data = (obs_gripper_data.permute(0, 2, 3, 1).numpy() * 255.).astype(np.uint8)\n",
     "for obs_image_frame in obs_image_data:\n",
     "    obs_image.append(obs_image_frame)\n",
-    "mediapy.show_video(obs_image, fps=1)\n",
+    "for obs_gripper_frame in obs_gripper_data:\n",
+    "    obs_gripper.append(obs_gripper_frame)\n",
+    "mediapy.show_video(obs_image, fps=5)\n",
+    "mediapy.show_video(obs_gripper, fps=5)\n",
     "\n",
     "action_data = batch_data['action']  # (T,7)\n",
     "for action_frame in action_data:\n",
     "    action.append(action_frame)  # each is (7)\n",
     "actions_vis, fig, ax = plot_action_wrt_time(np.array(action))\n",
-    "mediapy.show_video(actions_vis, fps=2)\n",
+    "mediapy.show_video(actions_vis, fps=5)\n",
     "\n"
    ]
   },
