add: hdfree training config

--- a/debug/de_dataset_vis.ipynb
+++ b/debug/de_dataset_vis.ipynb
@@ -42,8 +42,10 @@
    ],
    "source": [
     "dataset = TCLImageDataset(\n",
-    "    data_root=\"/home/geyuan/local_soft/TCL/collected_data_0425\",\n",
-    "    horizon=16, pad_before=0, pad_after=7,\n",
+    "    data_root=\"/home/geyuan/local_soft/TCL/collected_data_0507_light_random\",\n",
+    "    h5_path=\"/home/geyuan/local_soft/TCL/hdf5/collected_data_0507_light_random.h5\",\n",
+    "    use_h5=True,\n",
+    "    horizon=16, pad_before=1, pad_after=7,\n",
     "    shape_meta={\n",
     "        \"obs\": {\n",
     "            \"image\": {\n",
@@ -63,9 +65,16 @@
     "            \"shape\": [7,]\n",
     "        }\n",
     "    }\n",
-    ")\n",
-    "dataloader_speed_test(dataset)"
+    ")"
    ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "dataloader_speed_test(dataset)",
+   "id": "2611902c109132ef"
   },
   {
    "cell_type": "code",
@@ -191,8 +200,8 @@
     "\n",
     "obs_image_data = batch_data['obs']['image']  # (T,C,H,W), in [-1,1]\n",
     "obs_gripper_data = batch_data['obs']['gripper']\n",
-    "obs_image_data = (obs_image_data.permute(0, 2, 3, 1).numpy() * 255.).astype(np.uint8)\n",
-    "obs_gripper_data = (obs_gripper_data.permute(0, 2, 3, 1).numpy() * 255.).astype(np.uint8)\n",
+    "obs_image_data = (obs_image_data.permute(0, 2, 3, 1).numpy() * 127.5 + 127.5).astype(np.uint8)\n",
+    "obs_gripper_data = (obs_gripper_data.permute(0, 2, 3, 1).numpy() * 127.5 + 127.5).astype(np.uint8)\n",
     "for obs_image_frame in obs_image_data:\n",
     "    obs_image.append(obs_image_frame)\n",
     "for obs_gripper_frame in obs_gripper_data:\n",
